mobile/source/stylesheets/custom.scss
// 全部类别
// .table-view .table-view-cell {
// 	background: #efecec;
// }
img[src="http://icon.cnzz.com/img/pic1.gif"] {
	display: none
}

.popover-left .popover:before {
	left: 86px;
}

i.price {
	font-style:normal;
	color: #DC143C;
}

.btn-red {
	padding: 0 5px;
	background-color: #E62418;
	color:#fff;
}
.slider-all {
    background-color:white;
}
.slider-all ul{
    float:left; padding:3px 1px 1px 1px;
}
.slider-all ul li {
    width:100px;
    height:auto;
    border:3px outset #efecec;
    padding-top:1px;
    float:left;
    text-align:center;
}
.slider-type {
    background-color:gray;}

.sub-menus-ul {
	background: #fff;
	li a {
		color: #000;
	}
}

// 列表显示页面

.gray-line-1 {
	height:1px;
	margin: 4px 0;
	border-top:1px solid #efecec
}

p.font-14 {
	font-size: 14px;
}

.gr_dian {
	font-size: 24px;
	color: #2E8B57;
}

.circle- {
	font-size: 24px;
}

.price-color {
	background-color: #DC143C;
	padding: 0 5px;
}

.text-overflow {
	// display:block;                     /*内联对象需加*/
	width:28em;
	word-break:keep-all;           /* 不换行 */
	white-space:nowrap;          /* 不换行 */
	overflow:hidden;               /* 内容超出宽度时隐藏超出部分的内容 */
	text-overflow:ellipsis;         /* 当对象内文本溢出时显示省略标记(...) ；需与overflow:hidden;一起使用。*/
	font-size: 14px;
}

table.gridtable {
	 display: inline-block;
	font-family: verdana,arial,sans-serif;
	font-size:11px;
	color:#333333;
	border-width: 1px;
	border-color: #666666;
	border-collapse: collapse;
}
table.gridtable th {
	border-width: 1px;
	padding: 8px;
	border-style: solid;
	border-color: #666666;
	background-color: #dedede;
}
table.gridtable td {
	// width:30%;
	width:8em;
	font-size: 15px;
	border-width: 1px;
	padding: 8px;
	border-style: solid;
	border-color: #666666;
	// background-color: #a9a9a9;
}

table.gridtable td a{
	color: #a9a9a9
}

.slider-all h1 {
	width:90%;
	overflow: hidden;
	margin: 25px 0 10px;
}

.slider-all img {
	vertical-align: bottom;
}

.list-top {
	margin: 0 0 8px;
}

.list-top p {
	padding-top:4px;
}

.list-title {
	display: inline-block;
	word-break:keep-all;           /* 不换行 */
	white-space:nowrap;
	max-width: 70%;
	overflow:hidden;               /* 内容超出宽度时隐藏超出部分的内容 */
	text-overflow:ellipsis;
	font-family: SimHei;
	font-size: 1.2em;
}

.list-cont {
	min-height: 85px;
	line-height: 1.4em;
	font-size: 14px;
	color: #767676;
	font-family: SimSun;
}

.list-cont li{
	border: none;
}

ul.inline li{
	display: inline-block;
	// margin-bottom: 5px;
	font-size:88%;
}

.list-bottom {

}

ul.list-bottom li{
	display: inline-block;
	border: none;
}

ul.border li {
	padding:0 5px;
	border:1px solid #000;
}

.circle:before {
	content: "\25E6";
	font-size: 40px;
	vertical-align: top;

}

.dot:before {
	content: "\2022";
	font-size: 40px;
	color: #2E8B57;
	vertical-align: top;
}

.more-box {
  border: 1px solid #000;
  font-size: 16px;
}

// 搜索页面
/*热门搜索关键词*/
#HotSearchKey{
  width:100%;
  margin:0 auto 3%;
  border-left:1px solid #eaeaea;
  border-top:1px solid #eaeaea;
  overflow:hidden;
  font-size:1.4em;
}
#HotSearchKey strong{
  float:left;
  width:25%;
  border-bottom:1px solid #eaeaea;
  border-right:1px solid #eaeaea;
  height:54px;
  line-height:54px;
  text-align:center;
  font-weight:normal;
  position:relative;
  margin-top:-1px;
  color:#ffb301;
  margin-left:-1px;
}
#HotSearchKey a{
  float:left;
  width:25%;
  padding-top:4%;
  padding-bottom:4%;
  text-align:center;
  position:relative;
  border-bottom:1px solid #eaeaea;
  border-right:1px solid #eaeaea;
  color:#b8b8b8;
  margin-left:-1px;
  margin-top:-1px;
}
#HotSearchKey a:active{
  background:#ffb400;
  color:#fff;
}
#HotSearchKey em{
  color:#ffb400;
}

// /* 搜索框 */
#search{
  &.contanier{
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
    background-color: #fff;
  }
  width: 90%;
  padding: 62px 5% 0 5%;
  margin: 0 auto;
  margin-bottom: 5%;
  .search-input{
    padding: 0 0 10px 0;
    margin-left: -1px;
    float: left;
    width: 62%;
    border: 1px solid #eaeaea;
    border-right: none;
    line-height: 51px;
    height: 55px;
    background: url(../images/btn_search.gif) no-repeat left center;
    font-size: 2.1em;
    color: #b8b8b8;
    padding-left:18%;
  }
  .btn_send {
    float: left;
    width: 20%;
    background-color: #ffb400;
    border: 0;
    height: 55px;
    line-height: 53px;
    font-size: 22px;
    font-family: '微软雅黑';
    color: #fff;
    padding: 6px 0;
  }
  .seach-area{
    height: 20%;
    .search-label{
      width: 100%;
    }
    .search-content{
      position: relative;
    }
    .search-label li{
     color: #333;
     border-bottom: none;
     width: 13%;
     display: inline-block;
     // float: left;
     text-align: center;
     font-size: 1.4em;
     padding: 2% 3px;
    }
  }
}

.search-label li.active {
  background-color: #eaeaea;
  color: #333;
  border: 1px solid #ececec;
  border-bottom: none;
}

.resault-list {
  position: absolute;
  top: 67px;
  width: 100%;
  max-height: 400px;
  background-color: #FFFFFF;
  overflow-y: scroll;
  z-index: 999;
  font-size: large;
}

.resault-list li {
	padding-left: 10px;
	line-height: 3em;
	border-bottom: 1px solid #efe0ce
}
.resault-list li a{
	color: #999;
	font: 20px/22px Microsoft Yahei;
}

// 首页滚动广告条
.carousel > .carousel-inner > .item {
	padding: 0
}

.carousel > .carousel-control {
	display: none;
}

.table-view-cell .col {
	padding: 5px 5px 0
}

.table-view .table-view-cell {
  padding: 0 10px;
  &.media-more{
    font-size: 15px;
    color: #2bb2a3;
    text-align: center;
    top: 10px;
    padding-top:10px;
  }
  .more-detail{
    position: absolute;
    top: 36%;
    z-index: 999;
    left: 80%;
  }
}
.item-thumbnail-left {
	min-height:85px;
}

.list .btn {
	padding: 0 3px;
}

.item-thumbnail-left > a:first-child > img:first-child {
	position: absolute;
  top: 10px;
  left: 10px;
  max-width: 80px;
  max-height: 80px;
  width: 100%;
  height: 100%;
}

.content {
	padding-bottom:60px;
}

.list:last-child.card {
  margin-bottom: 48px;
}

